--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "antd": "^3.11.2",
     "axios": "^0.18.0",
+    "babel-plugin-import": "^1.11.0",
     "qs": "^6.6.0",
     "react": "^16.6.3",
+    "react-app-rewired": "^2.0.1",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
