--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "set PORT=8003&&react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "set PORT=8003&&react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
