--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-app-rewired": "^2.0.1",
     "react-dom": "^16.6.3",
     "react-redux-toastr": "^7.4.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
